Fixed alignment of columns further

--- a/word-creation/src/styles.css
+++ b/word-creation/src/styles.css
@@ -173,7 +173,7 @@ Source: https://stackoverflow.com/questions/63413498/unaligned-first-columns-wit
 .word-list:before {
     content:"";
     display:block;
-    margin-top:-1em;
+    margin-top:-1.15em;
 }
 
 .word-container {
